--- a/src/app/feature/pago/components/listar-pago/listar-pago.component.html
+++ b/src/app/feature/pago/components/listar-pago/listar-pago.component.html
@@ -11,8 +11,9 @@
   </div>
 <div id="pagos" *ngIf='verPagosPendientes'>
   <br><br>  
-   <table class="table">
-    <thead>
+   <table aria-describedby="Informacion de Estado de Cuenta" class="table">
+    <caption>Informacion de Estado de Cuenta</caption>
+    <thead class="table-primary">
       <tr>
         <th scope="col">Id Pago</th>
         <th scope="col">Identificación</th>
@@ -25,7 +26,7 @@
       </tr>
     </thead>
     <tbody>
-      <tr class="table-active" *ngFor="let pago of listaLocalPagos">
+      <tr *ngFor="let pago of listaLocalPagos">
         <th scope="row">{{pago.idPago}}</th>
         <td>{{pago.documentoIdentificacionDeudor}}</td>
         <td>{{pago.codigoFactura}}</td>
