--- a/src/app/feature/home/home.component.html
+++ b/src/app/feature/home/home.component.html
@@ -1,1 +1,8 @@
-<img src="assets/img/pagos.jpg" alt="Imagen de Pagos" />>
+<div class="container">
+    <div class="row">
+        <div class="col-md-6 col-md-offset-3">
+            <img src="assets/img/pagos.jpg" alt="Imagen de Pagos" class="img-responsive center-block" />
+            <div class="h-30"></div>
+        </div>
+    </div>
+</div>
