--- a/src/app/feature/pago/components/listar-pago/listar-pago.component.html
+++ b/src/app/feature/pago/components/listar-pago/listar-pago.component.html
@@ -2,16 +2,16 @@
 <div class="container">
   <div class="row">
       <div class="bd-example" *ngIf='!verPagosPendientes'>
-          <br><br>
-          <form class="row g-3">
-            <div class="col-auto">
-              <input  [(ngModel)]="identificacion"  [ngModelOptions]="{standalone: true}" type="text" class="form-control" id="txtIdentificacion" placeholder="Identificación">
-            </div>
-            <div class="col-auto">
-              <button id="btnConsultar" type="button" class="btn btn-primary mb-3" (click)='consultarPago ()'>Consultar Estado De Cuenta</button>
-            </div>
-          </form>
-      </div>
+        <br>
+        <form [formGroup]="pagoForm" (ngSubmit)="consultarPago()" class="row g-4"> 
+          <div class="col-auto">
+            <input type="text" class="form-control" class="form-control" id="txtIdentificacion" formControlName="identificacion" placeholder="Identificación">
+          </div>
+          <div class="col-auto">
+            <button id="btnConsultar" type="submit" class="btn btn-primary mb-3">Consultar Estado De Cuenta</button>
+          </div>
+      </form>
+    </div>
       <div id="pagos" *ngIf='verPagosPendientes'>
           <br>
           <h4>Informacion de Estado de Cuenta</h4>
