--- a/src/app/feature/home/home.component.html
+++ b/src/app/feature/home/home.component.html
@@ -1,7 +1,10 @@
 <div class="container">
     <div class="row">
         <div class="col-md-6 col-md-offset-3">
-            <img src="assets/img/pagos.jpg" alt="Imagen de Pagos" class="img-responsive center-block" />
+            <img src="assets/img/pagos.jpg" alt="Imagen de Pagos" class="img-responsive center-block" 
+            srcset="pagos.jpg 2x, 
+3             pagos.jpg 768w, 
+4             pagosjpg 768w 2x" />
             <div class="h-30"></div>
         </div>
     </div>
