--- a/src/app/feature/pago/components/listar-pago/listar-pago.component.html
+++ b/src/app/feature/pago/components/listar-pago/listar-pago.component.html
@@ -3,12 +3,12 @@
   <div class="row">
       <div class="bd-example" *ngIf='!verPagosPendientes'>
         <br>
-        <form [formGroup]="pagoForm" (ngSubmit)="consultarPago()" class="row g-4"> 
+        <form [formGroup]="pagoForm" (ngSubmit)="consultarPorCedula()" class="row g-4"> 
           <div class="col-auto">
-            <input type="text" class="form-control" class="form-control" id="txtIdentificacion" formControlName="identificacion" placeholder="Identificación">
+            <input validar type="text" class="form-control" class="form-control" id="txtIdentificacion" formControlName="identificacion" placeholder="Identificación">
           </div>
           <div class="col-auto">
-            <button id="btnConsultar" type="submit" class="btn btn-primary mb-3">Consultar Estado De Cuenta</button>
+            <button id="btnConsultar" type="submit" class="btn btn-primary mb-3" [disabled]="pagoForm.invalid">Consultar Estado De Cuenta</button>
           </div>
       </form>
     </div>
@@ -42,7 +42,7 @@
               </tr>
             </tbody>
           </table>
-          <button  id="btnAtras"  type="button" class="btn btn-primary mb-3" (click)='atras()'>Atras</button>
+          <button  id="btnAtras"  type="button" class="btn btn-primary mb-3" (click)='limpiarFormulario()'>Atras</button>
       </div>
   </div> 
 </div>
